--- a/auth_service/.env
+++ b/auth_service/.env
@@ -1,6 +1,6 @@
 DB_DRIVER=ODBC Driver 17 for SQL Server
-DB_SERVER=<your_server_name>
+DB_SERVER=localhost
 DB_PORT=1433
-DB_NAME=<your_database_name>
-DB_USER=<your_username>
-DB_PASSWORD=<your_password>
+DB_NAME=Java_MSA
+DB_USER=sagar
+DB_PASSWORD=p@$$word
